CSS for language script added to style sheet

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         gtag('config', 'G-FW93YMH578');
     </script>
+
 </head>
 
 <body class="dark-bg">
@@ -62,20 +63,20 @@
             </div>
             <div lang="en" class="text-center load-more top_60 wow fadeInUp" data-wow-delay="0.2s">
                 <a href="home.html">
-                    <button data-key="btn-ux" class="site-btn" data-tilt>Actual
+                    <button data-key="btn-ux" class="site-btn" data-tilt>DESIGN (Ixd)
                     </button>
                 </a>
                 <div class="padding_20"></div>
 
                 <a href="https://peterveras.github.io/photography/">
-                    <button data-key="btn-photo" class="site-btn" data-tilt>Actual
+                    <button data-key="btn-photo" class="site-btn" data-tilt>PHOTOGRAPHY
                     </button>
                 </a>
 
                 <div class="padding_20"></div>
 
                 <a href="https://peterverastegui.wordpress.com/">
-                    <button data-key="btn-writing" class="site-btn" data-tilt>Actual
+                    <button data-key="btn-writing" class="site-btn" data-tilt>WRITING
                     </button>
                 </a>
             </div>
@@ -143,7 +144,7 @@
             "languages": {
                 "en": {
                     "strings": {
-                        "btn-ux": "DESIGN [IxD]",
+                        "btn-ux": "DESIGN (IxD)",
                         "btn-photo": "PHOTOGRAPHY",
                         "btn-writing": "WRITING"
                     }
