--- a/es.html
+++ b/es.html
@@ -262,12 +262,12 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que ayuda, a compañías, a crear productos y
-            servicios que son fáciles de usar, y mientras estoy en ello también las asesoro con su look para que se vean
-            bien, realmente bien. Para aprender mas acerca de mi visita mi &nbsp;<a
-              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
-                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
-              href="https://open.spotify.com/playlist/5E2u3noK6foq4td4WBlPYH?si=595b87827b9349c8" target="_blank"
+          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que trabaja con compañías, creaando productos y
+            servicios que son fáciles de usar, y mientras estoy en ello también las asesoro para que se vean realmente
+            bien. Para saber más de mi visita mi &nbsp;<a href="https://peterverastegui.wordpress.com/"
+              rel="noopener noreferrer" target="_blank"><i class="fas fa-external-link-square-alt"
+                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
+              href="https://open.spotify.com/playlist/3CB03kqQDySP7I2gEjWcsA?si=1c60c31b64c14e6b" target="_blank"
               rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;lista de
               canciones</a>&nbsp;de este año en
             Spotify.</p>
