--- a/es.html
+++ b/es.html
@@ -266,13 +266,14 @@
             servicios que son fáciles de usar, y mientras estoy en ello también las asesoro para que se vean realmente
             bien. Para saber más de mi visita mi &nbsp;<a href="https://peterverastegui.wordpress.com/"
               rel="noopener noreferrer" target="_blank"><i class="fas fa-external-link-square-alt"
-                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
-              href="https://open.spotify.com/playlist/3CB03kqQDySP7I2gEjWcsA?si=1c60c31b64c14e6b" target="_blank"
-              rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;lista de
-              canciones</a>&nbsp;de este año en
+                aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi playlist de este año en
             Spotify.</p>
+          <br>
+          <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/0V23tKtWkwzKAdVNMAeH1s?utm_source=generator&theme=0"
+            width="100%" height="352" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-
       </div>
     </div>
 
