--- a/home.html
+++ b/home.html
@@ -258,12 +258,13 @@
             products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
             check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or listen to my
-            current&nbsp;&nbsp;<a href="https://open.spotify.com/playlist/3CB03kqQDySP7I2gEjWcsA?si=1c60c31b64c14e6b"
-              target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-square-alt"
-                aria-hidden="true"></i>&nbsp;Spotify
-              playlist</a>.</p>
+            current Spotify playlist.</p>
+          <br>
+          <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/playlist/0V23tKtWkwzKAdVNMAeH1s?utm_source=generator&theme=0"
+            width="100%" height="352" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-
       </div>
     </div>
 
